--- a/js.html
+++ b/js.html
@@ -257,7 +257,10 @@
 
             <h1 class="nome-profs">Entrada e Saída de Dados</h1>
             <br>
-            <img class="img-effect" src="Captura de tela 2026-01-30 120820.png" alt="">
+
+            <h1 style=" font-size:30px;  color: yellow; " class="escrever">
+                Amanda <br> 18 <br><br>
+            </h1>
 
             <br>
             <details class="detalhes">
@@ -269,34 +272,17 @@
                         Leia o Texto abaixo!
                     </span>
                 </summary>
+                Entendendo variáveis em JavaScript:<br><br>
 
-                <p>
-                    <span style="background-color: yellow; color: black;">
-                        Em Python, usamos variáveis <br> para guardar informações.
-                    </span>
-                </p>
+                Crie a variável
+                <strong style="color: yellow;">let Name = "Amanda"</strong><br>
 
-                <p>
-                    <span style="background-color: yellow; color: black;">
-                        O sinal = serve para <br>atribuir um valor à variável.
-                    </span>
-                </p>
+                Depois crie:<br>
+                <strong style="color: yellow;">let Idade = 18</strong><br><br>
 
-                <p>
-                    <span style="background-color: yellow; color: black;">
-                        O comando console.log() <br> mostra o valor da variável na tela.
-                    </span>
-
-
-                <p>Eai Bora Práticar? <br>
-                    abaixo temos um campo <br> de treinamento <br>
-                    com as bordas RGB <br>
-                    escreva o código lá e <br>
-                    clique em enter em baixo</p>
-
-
-                </p>
-
+                Para mostrar na tela use:<br>
+                <strong style="color: yellow;">console.log(Name)</strong><br>
+                <strong style="color: yellow;">console.log(Idade)</strong>
             </details>
             <br>
 
@@ -322,7 +308,17 @@
 
             <h1 class="nome-profs"> Condições com IF/ELSE </h1>
             <br>
-            <img class="img-effect" src="Captura de tela 2026-01-30 111307.png" alt="">
+
+            <h1 style="color: yellow; " class="escrever">
+
+                Nota = 7 <br>
+                if(Nota >= 6){ <br>
+                console.log("Aprovado") <br>
+                }else{ <br>
+                console.log("Reprovado") <br>
+                } <br>
+
+            </h1>
 
             <br>
             <details class="detalhes">
@@ -334,42 +330,24 @@
                         Leia o Texto abaixo!
                     </span>
                 </summary>
-                <p>
-                    Pequeno <strong>gafanhoto</strong> 🌱, primeiro você cria uma
-                    <span style="background: yellow; color: black;">variável</span>
-                    para guardar a nota do aluno.
-                    <br>
+                Faça um verificador de nota usando If/Else.<br><br>
 
-                    Depois disso, o programa já tem um valor para analisar.
-                    <br>
+                <strong>Instruções:</strong><br>
 
-                    Em seguida, use o <span style="background: yellow; color: black;">if</span>
-                    para <span style="background: yellow; color: black;">verificar a condição</span>.
-                    <br>
+                Crie a variável
+                <strong style="color: yellow;">let nota = 7</strong><br>
 
-                    Essa condição compara a nota com o valor mínimo para aprovação.
-                    <br>
+                Depois use:<br>
+                <strong style="color: yellow;">if (nota >= 6) {</strong><br>
 
-                    Se a nota for <span style="background: yellow; color: black;">maior ou igual a 6</span>,
-                    o código dentro do <span style="background: yellow; color: black;">if</span> será executado.
-                    <br>
+                Dentro coloque:<br>
+                <strong style="color: yellow;">console.log("Aprovado")</strong><br>
 
-                    Assim, o aluno será considerado aprovado.
-                    <br>
+                Após isso use:<br>
+                <strong style="color: yellow;">} else {</strong><br>
 
-                    Caso a condição seja falsa, o programa entra no
-                    <span style="background: yellow; color: black;">else</span>.
-                    <br>
-
-                    Nesse caso, a mensagem exibida será que o aluno foi reprovado.
-                </p>
-
-                <p>Eai Bora Práticar? <br>
-                    abaixo temos um campo <br> de treinamento <br>
-                    com as bordas RGB <br>
-                    escreva o código lá e <br>
-                    clique em enter em baixo</p>
-
+                E finalize com:<br>
+                <strong style="color: yellow;">console.log("Reprovado") }</strong>
 
             </details>
             <br>
@@ -394,7 +372,9 @@
 
             <h1 class="nome-profs">Repetições com While</h1>
             <br>
-            <img class="img-effect" src="Captura de tela 2026-01-30 114917.png" alt="">
+            <h1><strong
+                    style="color: yellow; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 40px;"
+                    class="escrever">1,2,3,4,5,6,7,8,9,10</strong></h1>
 
             <br>
             <details class="detalhes">
@@ -403,44 +383,22 @@
                     <span class="depois">Leia o Texto Abaixo!</span>
 
                 </summary>
-                <p>
-                    Pequeno <strong>gafanhoto</strong> 🌱 <br> primeiro você cria uma
-                    <span style="background: yellow; color: black;">variável contador</span> <br>
-                    começando em 1.
-                    <br>
 
-                    Em seguida, usamos o
-                    <span style="background: yellow; color: black;">while</span> <br>
-                    para repetir o código.
-                    <br>
+                Faça um contador até 10 usando While.<br><br>
 
-                    A condição
-                    <span style="background: yellow; color: black;">contador &lt;= 10</span> <br>
-                    diz até quando o laço vai rodar.
-                    <br>
+                <strong>Instruções:</strong><br>
 
-                    Enquanto a condição for verdadeira, <br> o Python executa o bloco.
-                    <br>
+                Crie a variável
+                <strong style="color: yellow;">let Contador = 1</strong><br>
 
-                    O
-                    <span style="background: yellow; color: black;">console.log()</span>
-                    mostra o valor <br>atual do contador.
-                    <br>
+                Depois use:<br>
+                <strong style="color: yellow;">while (Contador <= 10) {</strong><br>
 
-                    Depois disso, somamos
-                    <span style="background: yellow; color: black;">++</span>
-                    ao contador <br> para evitar um loop infinito.
-                    <br>
+                        Dentro coloque:<br>
+                        <strong style="color: yellow;">console.log(Contador)</strong><br>
 
-                    Quando o contador passa de 10 <br> o laço termina sozinho.
-                </p>
-
-                <p>Eai Bora Práticar? <br>
-                    abaixo temos um campo <br> de treinamento <br>
-                    com as bordas RGB <br>
-                    escreva o código lá e <br>
-                    clique em enter em baixo</p>
-
+                        E finalize com:<br>
+                        <strong style="color: yellow;">Contador++ }</strong>
 
             </details>
             <br>
