--- a/python.html
+++ b/python.html
@@ -257,7 +257,11 @@
 
             <h1 class="nome-profs">Entrada e Saída de Dados</h1>
             <br>
-            <img class="img-effect" src="Captura de tela 2026-01-28 110718.png" alt="">
+
+
+            <h1 style="color: yellow; " class="escrever">Maria Eduarda <br> 15</h1>
+
+
 
             <br>
             <details class="detalhes">
@@ -270,32 +274,27 @@
                     </span>
                 </summary>
 
-                <p>
-                    <span style="background-color: yellow; color: black;">
-                        Em Python, usamos variáveis <br> para guardar informações.
-                    </span>
-                </p>
-
-                <p>
-                    <span style="background-color: yellow; color: black;">
-                        O sinal = serve para <br>atribuir um valor à variável.
-                    </span>
-                </p>
-
-                <p>
-                    <span style="background-color: yellow; color: black;">
-                        O comando print() <br> mostra o valor da variável na tela.
-                    </span>
 
 
-                <p>Eai Bora Práticar? <br>
-                    abaixo temos um campo <br> de treinamento <br>
-                    com as bordas RGB <br>
-                    escreva o código lá e <br>
-                    clique em enter em baixo</p>
+                Entendendo o código em Python:<br><br>
 
+                <strong>Nome = "Maria Eduarda"</strong><br>
+                Aqui estamos criando uma variável chamada
+                <strong style="color: yellow;">Nome</strong>
+                e guardando um texto (string) dentro dela.<br><br>
 
-                </p>
+                <strong>Idade = 15</strong><br>
+                Aqui criamos outra variável chamada
+                <strong style="color: yellow;">Idade</strong>
+                e guardamos um número inteiro nela.<br><br>
+
+                <strong>print(Nome)</strong><br>
+                O comando
+                <strong style="color: yellow;">print()</strong>
+                mostra na tela o valor que está dentro da variável Nome.<br><br>
+
+                <strong>print(Idade)</strong><br>
+                Aqui o print mostra o valor guardado na variável Idade.
 
             </details>
             <br>
@@ -322,7 +321,12 @@
 
             <h1 class="nome-profs"> Condições com IF/ELSE </h1>
             <br>
-            <img class="img-effect" src="Captura de tela 2026-01-28 110737.png" alt="">
+
+            <h1 style="color: yellow; " class="escrever">nota = 7 <br>
+
+                if nota >= 6: <br> print("Aprovado ✅") <br>
+                else: <br>
+                print("Reprovado ❌")</h1> <br>
 
             <br>
             <details class="detalhes">
@@ -334,42 +338,25 @@
                         Leia o Texto abaixo!
                     </span>
                 </summary>
-                <p>
-                    Pequeno <strong>gafanhoto</strong> 🌱, primeiro você cria uma
-                    <span style="background: yellow; color: black;">variável</span>
-                    para guardar a nota do aluno.
-                    <br>
 
-                    Depois disso, o programa já tem um valor para analisar.
-                    <br>
+                Faça um verificador de nota usando If/Else.<br><br>
 
-                    Em seguida, use o <span style="background: yellow; color: black;">if</span>
-                    para <span style="background: yellow; color: black;">verificar a condição</span>.
-                    <br>
+                <strong>Instruções:</strong><br>
 
-                    Essa condição compara a nota com o valor mínimo para aprovação.
-                    <br>
+                Crie a variável
+                <strong style="color: yellow;">nota = 7</strong><br>
 
-                    Se a nota for <span style="background: yellow; color: black;">maior ou igual a 6</span>,
-                    o código dentro do <span style="background: yellow; color: black;">if</span> será executado.
-                    <br>
+                Depois use:<br>
+                <strong style="color: yellow;">if nota >= 6:</strong><br>
 
-                    Assim, o aluno será considerado aprovado.
-                    <br>
+                Dentro coloque:<br>
+                <strong style="color: yellow;">print("Aprovado")</strong><br>
 
-                    Caso a condição seja falsa, o programa entra no
-                    <span style="background: yellow; color: black;">else</span>.
-                    <br>
+                Após isso use:<br>
+                <strong style="color: yellow;">else:</strong><br>
 
-                    Nesse caso, a mensagem exibida será que o aluno foi reprovado.
-                </p>
-
-                <p>Eai Bora Práticar? <br>
-                    abaixo temos um campo <br> de treinamento <br>
-                    com as bordas RGB <br>
-                    escreva o código lá e <br>
-                    clique em enter em baixo</p>
-
+                E finalize com:<br>
+                <strong style="color: yellow;">print("Reprovado")</strong>
 
             </details>
             <br>
@@ -394,54 +381,47 @@
 
             <h1 class="nome-profs">Repetições com While</h1>
             <br>
-            <img class="img-effect" src="Captura de tela 2026-01-28 110805.png" alt="">
+
+            <h1><strong
+                    style="color: yellow; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 40px;"
+                    class="escrever">1,2,3,4,5,6,7,8,9,10</strong></h1>
 
             <br>
+
             <details class="detalhes">
                 <summary class="detalhes-smr3">
-                    <span class="antes">Bora Fazer?</span>
-                    <span class="depois">Leia o Texto Abaixo!</span>
-
+                    <span class="antes">
+                        Bora Fazer?
+                    </span>
+                    <span class="depois">
+                        Leia o Texto abaixo!
+                    </span>
                 </summary>
-                <p>
-                    Pequeno <strong>gafanhoto</strong> 🌱 <br> primeiro você cria uma
-                    <span style="background: yellow; color: black;">variável contador</span> <br>
-                    começando em 1.
-                    <br>
-
-                    Em seguida, usamos o
-                    <span style="background: yellow; color: black;">while</span> <br>
-                    para repetir o código.
-                    <br>
-
-                    A condição
-                    <span style="background: yellow; color: black;">contador &lt;= 10</span> <br>
-                    diz até quando o laço vai rodar.
-                    <br>
-
-                    Enquanto a condição for verdadeira, <br> o Python executa o bloco.
-                    <br>
-
-                    O
-                    <span style="background: yellow; color: black;">print</span>
-                    mostra o valor <br>atual do contador.
-                    <br>
-
-                    Depois disso, somamos
-                    <span style="background: yellow; color: black;">+1</span>
-                    ao contador <br> para evitar um loop infinito.
-                    <br>
-
-                    Quando o contador passa de 10 <br> o laço termina sozinho.
-                </p>
-
-                <p>Eai Bora Práticar? <br>
-                    abaixo temos um campo <br> de treinamento <br>
-                    com as bordas RGB <br>
-                    escreva o código lá e <br>
-                    clique em enter em baixo</p>
 
 
+                <h3 style="text-align: center; color: white;">
+
+
+                    Faça um contador até 10 usando While.<br><br>
+
+                    <strong>Instruções:</strong><br>
+
+                    Crie a variável
+                    <strong style="color: yellow;">C = 1</strong><br>
+
+                    Depois use:<br>
+                    <strong style="color: yellow;">while C <= 10:</strong><br>
+
+                            Dentro coloque:<br>
+                            <strong style="color: yellow;">print(C)</strong><br>
+
+                            E finalize com:<br>
+                            <strong style="color: yellow;">C += 1</strong>
+                            <br>
+
+
+
+                </h3>
             </details>
             <br>
 
