Ajustes na Responsividade

--- a/css.html
+++ b/css.html
@@ -307,8 +307,7 @@
 
               </textarea>
 
-            <div style="margin-left: 50px;
-              margin-right: 100px;
+            <div style="
               padding: 10px;" class="btn-confirmar" onclick="verificar()">Enter</div>
             <div class="escrever" id="result1">.......</div>
 
@@ -319,10 +318,10 @@
 
         <div class="ex">
 
-            <h1 class="nome-profs"> Campo de resposta com INPUT </h1>
+            <h1 class="nome-profs"> Usando INPUTS </h1>
             <br>
 
-            <h1 style="color: yellow; font-size: 40px;" class="escrever"><input type="text" placeholder="Nome">
+            <h1 style="color: yellow; font-size: 40px;" class="escrever"><input type="text" placeholder="Nome"> <br>
                 <input type="number" placeholder="Idade">
             </h1>
 
@@ -366,8 +365,7 @@
 
               </textarea>
 
-            <div style="margin-left: 100px;
-              margin-right: 100px;
+            <div style="
               padding: 10px;" class="btn-confirmar" onclick="verificar2()">Enter</div>
             <div class="escrever" id="result2">.......</div>
 
@@ -412,8 +410,7 @@
 
               </textarea>
 
-            <div style="margin-left: 100px;
-              margin-right: 100px;
+            <div style="
               padding: 10px;" class="btn-confirmar" onclick="verificar3()">Enter</div>
             <div class="escrever" id="result3">.......</div>
 
