--- a/js.html
+++ b/js.html
@@ -294,8 +294,7 @@
 
               </textarea>
 
-            <div style="margin-left: 100px;
-              margin-right: 100px;
+            <div style="
               padding: 10px;" class="btn-confirmar" onclick="verificar()">Enter</div>
             <div class="escrever" id="result1">.......</div>
 
@@ -360,8 +359,7 @@
 
               </textarea>
 
-            <div style="margin-left: 100px;
-              margin-right: 100px;
+            <div style="
               padding: 10px;" class="btn-confirmar" onclick="verificar2()">Enter</div>
             <div class="escrever" id="result2">.......</div>
 
@@ -408,8 +406,7 @@
 
               </textarea>
 
-            <div style="margin-left: 100px;
-              margin-right: 100px;
+            <div style="
               padding: 10px;" class="btn-confirmar" onclick="verificar3()">Enter</div>
             <div class="escrever" id="result3">.......</div>
 
