--- a/python.html
+++ b/python.html
@@ -307,8 +307,7 @@
 
               </textarea>
 
-            <div style="margin-left: 100px;
-              margin-right: 100px;
+            <div style="
               padding: 10px;" class="btn-confirmar" onclick="verificar()">Enter</div>
             <div class="escrever" id="result1">.......</div>
 
@@ -369,8 +368,7 @@
 
               </textarea>
 
-            <div style="margin-left: 100px;
-              margin-right: 100px;
+            <div style="
               padding: 10px;" class="btn-confirmar" onclick="verificar2()">Enter</div>
             <div class="escrever" id="result2">.......</div>
 
@@ -430,8 +428,7 @@
 
               </textarea>
 
-            <div style="margin-left: 100px;
-              margin-right: 100px;
+            <div style="
               padding: 10px;" class="btn-confirmar" onclick="verificar3()">Enter</div>
             <div class="escrever" id="result3">.......</div>
 
